--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "electron": "^16.0.7",
     "express": "^4.17.2",
+    "mpris-service": "^2.1.2",
     "ws": "^8.4.2"
   },
   "devDependencies": {
